--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <h3 class="white">Un evento . Un NFT</h3>
                      </div>
-                     <a href="#Noticias" class="arrow-contain">
-                        <img src="/assets/images/flechaGold.svg" >
-                     </a>
+                     <a href="#Noticias" class="ticketing-title">
+                        <div class="arrow-contain ">
+                            <img src="/assets/images/flechaGold.svg" >
+                         </div>
+                    </a>
                 </div>
                 <div class="ticketing-image wow animate__delay-2s">
                     <img class="wow animate__animated animate__infinite  animate__pulse animate__slower " src="/assets/images/ticket.png" >
@@ -154,24 +156,20 @@
                         <p class="black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="blog-people-categoria">
-                            <div class="blog-people-categoria-btn bg-golden">
+                            <a href="#" target="_blank" class="blog-people-categoria-btn bg-golden">
                                 <p class="white">RUMOR</p>
-                            </div>
-                            <div class="blog-people-categoria-btn bg-black">
+                            </a>
+                            <a href="#" target="_blank" class="blog-people-categoria-btn bg-black">
                                 <p class="white">NOTICIAS</p>
-                            </div>
-                            <div class="blog-people-categoria-btn bg-golden">
+                            </a>
+                            <a href="#" target="_blank" class="blog-people-categoria-btn bg-golden">
                                 <p class="white">ACTUALIDAD</p>
-                            </div>
+                            </a>
                         </div>
                         <img class="arrowRevert" src="/assets/images/arrow.svg">
                     </div>
                 </div>
-                <a href="#appMobile" class="ticketing-title">
-                    <div class="arrow-contain-black ">
-                        <img src="/assets/images/flechaGold.svg" >
-                     </div>
-                </a>
+            
             </div>
         </section>
         <!-- Section -->    
@@ -186,14 +184,14 @@
                 </div>
                 <div class="appMobile-container-3">
                     <div class="appMobile-container-col-1 ">
-                        <div class="appMobile-info-right wow animate__animated animate__zoomInRight animate__delay-2s">
+                        <div class="appMobile-info-right wow animate__animated animate__fadeInRight animate__delay-2s">
                             <h3 class="golden">Social</h3>
                             <div class="blog-people-imagenes">
                                 <img class="blog-img" src="assets/images/social.png" alt="">
                             </div>
                             <p class="col-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                         </div>
-                        <div class="appMobile-info-right wow animate__animated animate__zoomInLeft animate__delay-3s">
+                        <div class="appMobile-info-right wow animate__animated animate__fadeInRight animate__delay-3s">
                             <h3 class="golden">Coleccionables</h3>
                             <div class="blog-people-imagenes">
                                 <img src="assets/images/coleccionables.svg" alt="">
@@ -201,18 +199,18 @@
                             <p class="col-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                         </div>
                     </div>
-                    <div class="appMobile-container-col-1 appMobile-iphone wow animate__animated animate__zoomIn animate__delay-1s">
+                    <div style="z-index:1;" class="appMobile-container-col-1 appMobile-iphone wow animate__animated animate__zoomIn animate__delay-1s">
                         <img src="/assets/images/iphone.png" style="position: relative;" class="wow animate__animated animate__infinite  animate__pulse animate__slower">
                     </div>
                     <div class="appMobile-container-col-1 ">
-                        <div class="appMobile-info-left wow animate__animated animate__zoomInLeft animate__delay-4s">
+                        <div class="appMobile-info-left wow animate__animated animate__fadeInLeft animate__delay-4s">
                             <h3 class="golden">Entrada segura</h3>
                             <div class="blog-people-imagenes">
                                 <img class="blog-img" src="assets/images/qr.png" alt="">
                             </div>
                             <p class="col-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                         </div>
-                        <div class="appMobile-info-left wow animate__animated animate__zoomInLeft animate__delay-5s">
+                        <div class="appMobile-info-left wow animate__animated animate__fadeInLeft animate__delay-5s">
                             <h3 class="golden">Artistas</h3>
                             <div class="blog-people-imagenes">
                                 <img class="blog-img" src="assets/images/artistas.png" alt="">
@@ -221,17 +219,22 @@
                         </div>
                     </div>
                 </div>
+                <a href="#friendLocator-text" class="ticketing-title wow animate__animated animate__fadeInDown animate__delay-5s">
+                    <div class="arrow-contain-black-2">
+                        <img src="/assets/images/flechaGold.svg" >
+                     </div>
+                </a>
             </div>
         </section>
         <!-- Section -->    
         <section class="section" id="friendLocator">
-            <div class="friendLocator-container container col-12 ">
-                    <div class="friendLocator-texto ">
-                        <h2 class="golden wow animate__animated animate__fadeInLeft">ENCONTRATE CON TUS AMIGOS</h2>
+            <div class="friendLocator-container container col-12 " >
+                    <div class="friendLocator-texto " >
+                        <h2 class="golden wow animate__animated animate__fadeInLeft" id="friendLocator-text">ENCONTRATE CON TUS AMIGOS</h2>
                         <h3 class="white wow animate__animated animate__fadeInLeft animate__delay-1s">Bombo - Friend Locator</h3>
                         <p class="white wow animate__animated animate__fadeInLeft animate__delay-2s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur consectetur debitis quasi?</p>
                     </div>
-                    <a href="#endBanner" class="ticketing-title">
+                    <a href="#endBanner" class="ticketing-title ">
                         <div class="arrow-contain ">
                             <img src="/assets/images/flechaGold.svg" >
                          </div>
